fixed menu added
W przyszlości ustawić media query dla górnego i dolnego nava

--- a/index.html
+++ b/index.html
@@ -11,6 +11,51 @@
 				<h1>„Patrz oczyma, fotografuj sercem.”</h1>
 			</div>
 		</section>
+		<!-- <div class="menu">
+			<div id="about-nav"><a>About</a></div>
+		</div> -->
+		<!-- <div class="menu-top">
+			<div id="top-left"></div>
+			<div id= "top-nav" class="nav-text">About</div>
+			<div id="top-right"></div>
+		</div>
+
+		<div class="menu-bottom">
+			<div id="bottom-left"></div>
+			<div id= "bottom-nav" class="nav-text">Oferta</div>
+			<div id="bottom-right"></div>
+		</div>
+		<div class="menu-left">
+			<div id="left-top"></div>
+			<div id= "left-nav" class="nav-text">Kontakt</div>
+			<div id="left-bot"></div>
+		</div>
+		<div class="menu-right">
+			<div id="right-top"></div>
+			<div id= "right-nav" class="nav-text">Galeria</div>
+			<div id="right-bot"></div>
+		</div> -->
+
+		<div class="menu">
+			<div class="top">
+
+				<div class="top-left"></div>
+				<div class="nav-top nav-text">About</div>
+				<div class="top-right"></div>
+				
+			</div>
+			<div class="edge-navs">
+				<div class="nav-left nav-text">Kontakt</div>
+				<div class="nav-right nav-text">Galeria</div>
+			</div>
+			<div class="bot">
+				<div class="bot-left"></div>
+				<div class="nav-bot nav-text">Galeria</div>
+				<div class="bot-right"></div>
+			</div>
+			
+		</div>
+
 		<section class="about" id="about">
 			
 			<div class="main-view flex square-box" key="342">
