--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 		</section>
 		<section class="about" id="about">
 			<div class="flex full-height about-mobile">
-				<div class="about-div"><img src="img/me.jpg"></div>
-				<div class="about-div ">
+				<div class="about-div" id="first-about"><img src="img/me.jpg"></div>
+				<div class="about-div " id="second-about">
 					<div class="about-description">
 						<h1>About me</h1>
 						<p class="line"></p>
